Updated content and changing several image assets to local
Updated content and changing several image assets to local for better reliability

--- a/index.html
+++ b/index.html
@@ -489,11 +489,11 @@
 						<h2 class="section-heading">Currently Watching</h2>
 						<div class="tiled-list scrolling-tiled-list">
 							<!-- <a class="tile" href=""><img loading="Lazy" class="tile-image" src="" alt=""></img></a> -->							
-							<a class="tile" href="https://kitsu.app/anime/kusuriya-no-hitorigoto-2nd-season"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48649/poster_image/large-9a5d9890c991b34bb9d7c99fd0670582.jpeg" alt="The Apothecary Diaries Season 2"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/enen-no-shouboutai-san-no-shou"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/46119/poster_image/large-ded07dff8aa59b72cefa75d32f9664bb.jpeg" alt="Fire Force Season 3"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/to-be-hero-x"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/46672/poster_image/large-8a0e12c70a84aa9fae6f3130dfa89a29.jpeg" alt="To Be Hero X"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/lazarus"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47778/poster_image/large-e6b047c6ddaa92b2d2d000ae76dd906b.jpeg" alt="Lazarus"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/vigilante-boku-no-hero-academia-illegals"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49435/poster_image/large-e5d5b1b99ee244854365e6812ca29ac3.jpeg" alt="My Hero Academia: Vigilantes"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/kusuriya-no-hitorigoto-2nd-season"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Apothecary_Diarie2.jpeg" alt="The Apothecary Diaries Season 2"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/enen-no-shouboutai-san-no-shou"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Fire_Force3.jpeg" alt="Fire Force Season 3"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/to-be-hero-x"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/To_Be_Hero_X.jpeg" alt="To Be Hero X"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/lazarus"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Lazarus.jpeg" alt="Lazarus"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/vigilante-boku-no-hero-academia-illegals"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/My_Hero_Academia_Vigilantes.jpeg" alt="My Hero Academia: Vigilantes"></img></a>
 							 
 						</div><!-- tiled-list -->
 					</div><!-- Currently Watching-->			
@@ -578,31 +578,31 @@
 						<h3 class="section-subheading">Waiting for Dub to Finish</h3> 
 						<div class="tiled-list scrolling-tiled-list">							
 							<a class="tile" href="https://kitsu.app/anime/karakai-jouzu-no-takagi-san-2"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/42110/large.jpg" alt="Teasing Master Takagi-san 2"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/shiguang-dailiren-2nd-season"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/45504/poster_image/large-a42ea3ca66925eb6ed5d2243f892dac5.jpeg" alt="LINK CLICK 2"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/sentai-red-isekai-de-boukensha-ni-naru"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49121/poster_image/large-2a6a27d8d392e25003c26c50540c3ce7.jpeg" alt="THE RED RANGER Becomes an Adventurer in Another World"></img></a> 							
-							<a class="tile" href="https://kitsu.app/anime/katainaka-no-ossan-kensei-ni-naru"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49119/poster_image/large-eb38570ab532727e5252ef0338de0ea4.jpeg" alt="From Old Country Bumpkin to Master Swordsman"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/shiunji-ke-no-kodomotachi"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48544/poster_image/large-e82102ca2a3c4c15cfe53e6911316cee.jpeg" alt="The Shiunji Family Children"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/aru-majo-ga-shinu-made"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49005/poster_image/large-7a862ea7a1ca4d0aa1d708e13e04b2b4.jpeg" alt="Once Upon a Witch's Death"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/teogonia"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48702/poster_image/large-6f74d8a37d5ec7136f8849a15932f6ab.jpeg" alt="Teogonia"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/witch-watch"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49136/poster_image/large-4a6a177c5b2ff3d79e4542a0fbc07f28.jpeg" alt="Witch Watch"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/Kowloon-Generic-Romance"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49277/poster_image/large-4ec552eb89ae4c285eb405427615166f.jpeg" alt="Kowloon Generic Romance"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/Anne-Shirley"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49360/poster_image/large-f71b21eee26fa1ccbfd1738278209f32.jpeg" alt="Anne Shirley"></img></a>							
-							<a class="tile" href="https://kitsu.app/anime/kidou-senshi-gundam-gquuuuuux"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49386/poster_image/large-381d61686fdcff742742579caff33aeb.jpeg" alt="Mobile Suit Gundam GQuuuuuuX"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/shiguang-dailiren-2nd-season"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/LINK_CLICK2.jpeg" alt="LINK CLICK 2"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/sentai-red-isekai-de-boukensha-ni-naru"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/THE_RED_RANGER_Becomes_an_Adventurer.jpeg" alt="THE RED RANGER Becomes an Adventurer in Another World"></img></a> 							
+							<a class="tile" href="https://kitsu.app/anime/katainaka-no-ossan-kensei-ni-naru"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/From_Old_Country_Bumpkin.jpeg" alt="From Old Country Bumpkin to Master Swordsman"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/shiunji-ke-no-kodomotachi"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/The_Shiunji_Family_Children.jpeg" alt="The Shiunji Family Children"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/aru-majo-ga-shinu-made"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Once_Upon_a_Witchs_Death.jpeg" alt="Once Upon a Witch's Death"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/teogonia"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Teogonia.jpeg" alt="Teogonia"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/witch-watch"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/WITCH_WATCH.jpeg" alt="Witch Watch"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/Kowloon-Generic-Romance"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Kowloon_Generic_Romance.jpeg" alt="Kowloon Generic Romance"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/Anne-Shirley"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Anne_Shirley.jpeg" alt="Anne Shirley"></img></a>							
+							<a class="tile" href="https://kitsu.app/anime/kidou-senshi-gundam-gquuuuuux"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Mobile_Suit_Gundam_GQuuuuuuX.jpeg" alt="Mobile Suit Gundam GQuuuuuuX"></img></a>
 						</div><!-- tiled-list -->
 					</div><!-- Binge Watching -->
 					<div class="watching-item"><!--Most Anticipated-->
 						<h2 class="section-heading">Most Anticipated</h2>
 						<h3 class="section-subheading">Summber 2025</h3>
 						<div class="tiled-list scrolling-tiled-list">
-							<a class="tile" href="https://kitsu.app/anime/Kaiju-No8-SEASON-2"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48994/poster_image/large-af78ff88b53a32e494e5f916e7133de7.jpeg" alt="Kaiju No.8 Season 2"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/Sono-Bisque-Doll-wa-Koi-wo-Suru-Zokuhen"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/46492/poster_image/large-74f219301f25d489451ade45793925fa.jpeg" alt="My Dress-Up Darling Season 2"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/dandadan-2"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49425/poster_image/large-4ac1662fab9010d07fd3f65640a755ee.jpeg" alt="DAN DA DAN Season 2"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/kaoru-hana-wa-rin-to-saku"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49205/poster_image/large-552c3393fea612f6e1e920d866f4d6e2.jpeg" alt="The Fragrant Flower Blooms With Dignity"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/kakkou-no-iinazuke-2nd-season"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49067/poster_image/large-bdd44b01e38ffe6421814f41b9d1600f.jpeg" alt="A Couple of Cuckoos Season 2"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/dr-stone-science-future-part-2"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49751/poster_image/large-ade58955ba28ac45683ba06e7f71a710.jpeg" alt="Dr.STONE SCIENCE FUTURE Part 2"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/Kanojo-Okarishimasu-4th-Season"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49033/poster_image/large-717751d375ff72e0bbfa4a9eae5d5615.jpeg" alt="Rent-a-Girlfriend Season 4"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/new-panty-and-stocking"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/46227/poster_image/large-cda7d8837224022b8d52c24b4d98ba87.jpeg" alt="NEW PANTY AND STOCKING"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/silent-witch-chinmoku-no-majo-no-kakushigoto"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49097/poster_image/large-c3c79b16be1f2664cb3acad93eea1680.jpeg" alt="Secrets of the Silent Witch"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/Kaiju-No8-SEASON-2"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Kaiju_No8_Season_2.jpeg" alt="Kaiju No.8 Season 2"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/Sono-Bisque-Doll-wa-Koi-wo-Suru-Zokuhen"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/My_Dress-Up_Darling2.jpeg" alt="My Dress-Up Darling Season 2"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/dandadan-2"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/DAN_DA_DAN2.jpeg" alt="DAN DA DAN Season 2"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/kaoru-hana-wa-rin-to-saku"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/The_Fragrant_Flower_Blooms_With_Dignity.jpeg" alt="The Fragrant Flower Blooms With Dignity"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/kakkou-no-iinazuke-2nd-season"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/A_Couple_of_Cuckoos2.jpeg" alt="A Couple of Cuckoos Season 2"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/dr-stone-science-future-part-2"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/DrSTONE_SCIENCE_FUTURE_Part2.jpeg" alt="Dr.STONE SCIENCE FUTURE Part 2"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/Kanojo-Okarishimasu-4th-Season"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Rent-a-Girlfriend_4.jpeg" alt="Rent-a-Girlfriend Season 4"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/new-panty-and-stocking"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/New_Panty_and_Stocking.jpeg" alt="NEW PANTY AND STOCKING"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/silent-witch-chinmoku-no-majo-no-kakushigoto"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Secrets_of_the_Silent_Witch.jpeg" alt="Secrets of the Silent Witch"></img></a>
 						</div><!-- tiled-list -->
 						
 						<h3 class="section-subheading">Later</h3>
@@ -1048,17 +1048,10 @@
 
 			<div id="tab_linksandfollows" class="tab tab-actionable sidebar-content">
 				<div class="lf-feature">
-					<a class="lf-feature-link" href="https://www.crunchyroll.com/news/seasonal-lineup/2025/3/19/spring-2025-anime-crunchyroll">
-						<h3 class="lf-feature-title">Crunchyroll Spring 2025 Season Announced!</h3>
+					<a class="lf-feature-link" href="https://www.crunchyroll.com/news/seasonal-lineup/2025/6/18/summer-2025-anime-crunchyroll">
+						<h3 class="lf-feature-title">Crunchyroll Summer 2025 Season Announced!</h3>
 						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> Crunchyroll News</span>
-						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/Crunchyroll_Spring_2025_Season.jpg"></img>
-					</a>
-				</div>
-				<div class="lf-feature">
-					<a class="lf-feature-link" href="https://news.hidive.com/2025/3/25/hidive-reveals-spring-2025-simulcast-lineup-and-english-dubs">
-						<h3 class="lf-feature-title">HIDIVE Reveals Spring 2025 Lineup!</h3>
-						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> HIDIVE News</span>
-						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/HIDIVE_Spring_2025_Season.jpg"></img>
+						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/Crunchyroll_summer_2025_Season.png"></img>
 					</a>
 				</div>
 				<div class="lf-feature">
