--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<div id="about_fields">
 					<div class="about-field"><i class="fas fa-mars field-icon"></i> He / Him</div>
 					<div class="about-field"><i class="fas fa-birthday-cake field-icon"></i> April</div>
-					<div class="about-field"><i class="fas fa-map-marker-alt field-icon"></i> United States, Ohio</div>
+					<div class="about-field"><i class="fas fa-map-marker-alt field-icon"></i> United States</div>
 					<div class="about-field"><i class="fas fa-calendar field-icon"></i> Watching Since 2002</div>
 					<div class="about-field"><i class="fas fa-heart field-icon"></i> Waifu: <img class="waifu" src="assets/images/icons/waifu.png"></img> Shirayuki</div>
 					<div class="about-field"><i class="fas fa-microphone-alt field-icon"></i> English Dubbed</div>
@@ -488,13 +488,12 @@
 					<div class="watching-item"><!--Currently Watching-->
 						<h2 class="section-heading">Currently Watching</h2>
 						<div class="tiled-list scrolling-tiled-list">
-							<!-- <a class="tile" href=""><img loading="Lazy" class="tile-image" src="" alt=""></img></a> -->							
-							<a class="tile" href="https://kitsu.app/anime/kusuriya-no-hitorigoto-2nd-season"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Apothecary_Diarie2.jpeg" alt="The Apothecary Diaries Season 2"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/to-be-hero-x"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/To_Be_Hero_X.jpeg" alt="To Be Hero X"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/Kaiju-No8-SEASON-2"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Kaiju_No8_Season_2.jpeg" alt="Kaiju No.8 Season 2"></img></a>							
+							<!-- <a class="tile" href=""><img loading="Lazy" class="tile-image" src="" alt=""></img></a> -->
+							<a class="tile" href="https://kitsu.app/anime/Kaiju-No8-SEASON-2"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Kaiju_No8_Season_2.jpeg" alt="Kaiju No.8 Season 2"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/Sono-Bisque-Doll-wa-Koi-wo-Suru-Zokuhen"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/My_Dress-Up_Darling2.jpeg" alt="My Dress-Up Darling Season 2"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/dandadan-2"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/DAN_DA_DAN2.jpeg" alt="DAN DA DAN Season 2"></img></a>							
 							<a class="tile" href="https://kitsu.app/anime/dr-stone-science-future-part-2"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/DrSTONE_SCIENCE_FUTURE_Part2.jpeg" alt="Dr.STONE SCIENCE FUTURE Part 2"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/Sono-Bisque-Doll-wa-Koi-wo-Suru-Zokuhen"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/My_Dress-Up_Darling2.jpeg" alt="My Dress-Up Darling Season 2"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/silent-witch-chinmoku-no-majo-no-kakushigoto"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Secrets_of_the_Silent_Witch.jpeg" alt="Secrets of the Silent Witch"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/Kanojo-Okarishimasu-4th-Season"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Rent-a-Girlfriend_4.jpeg" alt="Rent-a-Girlfriend Season 4"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/new-panty-and-stocking"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/New_Panty_and_Stocking.jpeg" alt="NEW PANTY AND STOCKING"></img></a>
 							 
@@ -588,17 +587,24 @@
 							<a class="tile" href="https://kitsu.app/anime/kaoru-hana-wa-rin-to-saku"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/The_Fragrant_Flower_Blooms_With_Dignity.jpeg" alt="The Fragrant Flower Blooms With Dignity"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/kakkou-no-iinazuke-2nd-season"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/A_Couple_of_Cuckoos2.jpeg" alt="A Couple of Cuckoos Season 2"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/guimi-zhi-zhu"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Lord of the Mysteries.jpeg" alt="Lord of the Mysteries "></img></a>
-							<a class="tile" href="https://kitsu.app/anime/jidou-hanbaiki-ni-umarekawatta-ore-wa-meikyuu-wo-samayou-2nd-season"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Reborn as a Vending Machine, 2.jpeg" alt="Reborn as a Vending Machine, 2"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/mizu-zokusei-no-mahou-tsukai"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/The Water Magician.jpeg" alt="The Water Magician"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/clevatess-majuu-no-ou-to-akago-to-kabane-no-yuusha"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Clevatess.jpeg" alt="Clevatess"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/gachiakuta"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48946/poster_image/large-5855f32a7aa8e67ddc32d343498e087b.jpeg" alt="Gachiakuta"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/kijin-gentoushou"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/45151/poster_image/large-6668619f81fa927aea98500ddd67df28.jpeg" alt="Sword of the Demon Hunter"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/mikadono-sanshimai-wa-angai-choroi"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49012/poster_image/large-c42fce56b7da973a188267b1f70a4f28.jpeg" alt="Dealing with Mikadono Sisters Is a Breeze"></img></a>
+							<a class="tile" href=""><img loading="Lazy" class="tile-image" src="" alt=""></img></a>
 						</div><!-- tiled-list -->
 					</div><!-- Binge Watching -->
 					<div class="watching-item"><!--Most Anticipated-->
 						<h2 class="section-heading">Most Anticipated</h2>
-						<h3 class="section-subheading">Summber 2025</h3>
+						<h3 class="section-subheading">Fall 2025</h3>
 						<div class="tiled-list scrolling-tiled-list">
-							<a class="tile" href="https://kitsu.app/anime/futari-solo-camp"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Solo Camping for Two.jpeg" alt="Solo Camping for Two"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/silent-witch-chinmoku-no-majo-no-kakushigoto"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Secrets_of_the_Silent_Witch.jpeg" alt="Secrets of the Silent Witch"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/spy-x-family-season-3"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48939/poster_image/large-2248d85bf57f88e3b520c06622adef60.jpeg" alt="SPY x FAMILY Season 3"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/one-punch-man-3"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/46360/poster_image/large-0ef878dadeae0bf26c8b987ea47aefa1.jpeg" alt="One Punch Man 3"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/kakuriyo-no-yadomeshi-2nd-season"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48822/poster_image/large-5b8ea2281f75f45066073e72fc6ba277.jpeg" alt="Bed & Breakfast for Spirits- Season 2"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/tondemo-skill-de-isekai-hourou-meshi-2nd-season"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48190/poster_image/large-20635d47e58465c2d65584b377d78c7a.jpeg" alt="Campfire Cooking in Another World with my Absurd Skill Season 2"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/boku-no-hero-academia-final-season"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49279/poster_image/large-7ad60327e5a73e01f1c8f36bbae49230.jpeg" alt="My Hero Academia Final Season"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/souzai-saishuka-no-isekai-ryokouki"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49927/poster_image/large-caefb46a262cf5487660f67f0f8400ba.jpeg" alt="A Gatherer's Adventure in Isekai"></img></a>
 						</div><!-- tiled-list -->
 						
 						<h3 class="section-subheading">Later</h3>
@@ -606,17 +612,12 @@
 							<a class="tile" href="https://kitsu.app/anime/sousou-no-frieren-season-2"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49240/poster_image/large-9f65272eac7bac284d1696b4d1b68166.jpeg" alt="Frieren: Beyond Journey's End Season 2"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/spice-and-wolf-merchant-meets-the-wise-wolf-season-2"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49221/poster_image/large-8858375c6b49e38084bde90e0c4e556a.jpeg" alt="Spice and Wolf: MERCHANT MEETS THE WISE WOLF Season 2"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/honzuki-no-gekokujou-shisho-ni-naru-tame-ni-wa-shudan-wo-erandeiraremasen-4th-season"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48293/poster_image/large-c9ec8ab688dddcc27d1664c9acfc580a.jpeg" alt="Ascendance of a Bookworm Season 4"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/spy-x-family-season-3"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48939/poster_image/large-ecebb89d4760792be16f260fb891af2b.jpeg" alt="SPY x FAMILY Season 3"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/one-punch-man-3"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/46360/poster_image/large-0ef878dadeae0bf26c8b987ea47aefa1.jpeg" alt="One Punch Man 3"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/tongari-boushi-no-atelier"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/46043/poster_image/large-6cd4636f41259fbfe00fef081d0874e4.jpeg" alt="Witch Hat Atelier"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/kakuriyo-no-yadomeshi-2nd-season"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48822/poster_image/large-fa5c78fe9b7fa029449dd8d39dd4bba6.jpeg" alt="Bed & Breakfast for Spirits- Season 2"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/tongari-boushi-no-atelier"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/46043/poster_image/large-6cd4636f41259fbfe00fef081d0874e4.jpeg" alt="Witch Hat Atelier"></img></a>							
 							<a class="tile" href="https://kitsu.app/anime/tsuki-ga-michibiku-isekai-douchuu-3rd-season"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48978/poster_image/large-53410795467f453a3e4d3d5eb4e1e9ef.jpeg" alt="Tsukimichi Moonlit Fantasy Season 3"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/Mushoku-Tensei-Isekai-Ittara-Honki-Dasu-Season-3"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49002/poster_image/large-e187113b38f27a17216cf5c42f422aa3.jpeg" alt="Mushoku Tensei 3"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/tensei-shitara-slime-datta-ken-4th-season"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49235/poster_image/large-3774f4f6aa6c54a00aa7133c8ac4a701.jpeg" alt="Tensei Shitara Slime Datta Ken 4th Season"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/Kimetsu-no-Yaiba-Mugenjou-hen"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49001/poster_image/large-3209ced1f1ba56900d0485529c85ca3f.jpeg" alt="Demon Slayer: Kimetsu no Yaiba - Infinity Castle"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/tensei-shitara-slime-datta-ken-4th-season"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49235/poster_image/large-3774f4f6aa6c54a00aa7133c8ac4a701.jpeg" alt="Tensei Shitara Slime Datta Ken 4th Season"></img></a>							
 							<a class="tile" href="https://kitsu.app/anime/kobayashisan-Chi-no-Maidragon-Samishii-Gariya-no-Ryuu"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49215/poster_image/large-282fd5400cc01e03ca575c53e2813259.jpeg" alt="Miss Kobayashi’s Dragon Maid: A lonely Dragon wants to be Loved"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/yuru-camp-season-4"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49325/poster_image/large-4b8a605660cc7e0d5fb2dfcace96f55f.jpeg" alt="Yuru Camp△ SEASON 4"></img></a>
-							<a class="tile" href="https://kitsu.app/anime/tondemo-skill-de-isekai-hourou-meshi-2nd-season"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48190/poster_image/large-6615ca4176502c9c4404f9343ad70bc4.jpeg" alt="Campfire Cooking in Another World with my Absurd Skill Season 2"></img></a>
+							<a class="tile" href="https://kitsu.app/anime/yuru-camp-season-4"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49325/poster_image/large-4b8a605660cc7e0d5fb2dfcace96f55f.jpeg" alt="Yuru Camp△ SEASON 4"></img></a>							
 							<!--
 								<a class="tile" href="https://kitsu.app/anime/go-toubun-no-hanayome"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48807/poster_image/large-5f3e16d73ca7960fde730dd53ff7a68d.jpeg" alt="Quintessential Quintuplets Hanayome"></img></a>
 							-->
@@ -638,6 +639,7 @@
 							<a class="tile" href="https://kitsu.app/anime/nisekoi"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/7821/large.jpg" alt="Nisekoi: False Love"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/kekkon-suru-tte-hontou-desu-ka-365-days-to-the-wedding"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47586/poster_image/large-f66afbb13a00c3b1e7c1fa126dacf2d9.jpeg" alt="365 Days to the Wedding"></img></a>
 							<!--
+								<a class="tile" href="https://kitsu.app/anime/futari-solo-camp"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Solo Camping for Two.jpeg" alt="Solo Camping for Two"></img></a>
 								<a class="tile" href="https://kitsu.app/anime/kishuku-gakkou-no-juliet"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/41065/large.jpg?1597691087" alt="Boarding School Juliet"></img></a>
 								<a class="tile" href="https://kitsu.app/anime/5-toubun-no-hanayome-tv"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/47275/poster_image/large-eb4818f7a38a5b9a6e0217e2a2a20db1.jpeg" alt="The Quintessential Quintuplets Special"></img></a>
 								<a class="tile" href="https://kitsu.app/anime/banana-fish"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/poster_images/13988/large.jpg" alt="Banana Fish"></img></a>
@@ -1044,27 +1046,26 @@
 
 			<div id="tab_linksandfollows" class="tab tab-actionable sidebar-content">
 				<div class="lf-feature">
-					<a class="lf-feature-link" href="https://www.crunchyroll.com/news/seasonal-lineup/2025/6/18/summer-2025-anime-crunchyroll">
-						<h3 class="lf-feature-title">Crunchyroll Summer 2025 Season Announced!</h3>
-						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> Crunchyroll News</span>
-						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/Crunchyroll_summer_2025_Season.png"></img>
-					</a>
-				</div>
-				<div class="lf-feature">
-					<a class="lf-feature-link" href="https://www.animenewsnetwork.com/news/2025-07-03/geexplus-new-geexproductions-division-produces-gigguk-baan-the-boundaries-of-adulthood-anime-short-/.226256">
-						<h3 class="lf-feature-title">Gigguk's Bâan Anime Short Movie</h3>
-						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> animenewsnetwork.com</span>
+					<a class="lf-feature-link" href="https://youtu.be/V-P3HWXGYm4?si=9ohNeUR7cqz-izuC">
+						<h3 class="lf-feature-title">Bâan (2025) | Anime Short Film by Gigguk</h3>
+						<span class="lf-feature-source"><i class="fa-brands fa-youtube"></i> Gigguk</span>
 						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/baan.jpg"></img>
 					</a>
-				</div>
+				</div>				
 				<div class="lf-feature">
-					<a class="lf-feature-link" href="https://www.animenewsnetwork.com/news/2025-07-05/ascendance-of-a-bookworm-adopted-daughter-of-an-archduke-anime-reveals-spring-2026-debut/.226345">
-						<h3 class="lf-feature-title">Ascendance of a Bookworm Anime Reveals Spring 2026</h3>
-						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> animenewsnetwork.com</span>
-						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/bookworm.jpg"></img>
+					<a class="lf-feature-link" href="https://www.crunchyroll.com/news/seasonal-lineup/2025/9/17/fall-2025-anime-crunchyroll">
+						<h3 class="lf-feature-title">Crunchyroll Fall 2025 Season Announced!</h3>
+						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> Crunchyroll News</span>
+						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/Crunchyroll_fall_2025_Season.jpg"></img>
 					</a>
 				</div>
-
+				<div class="lf-feature">
+					<a class="lf-feature-link" href="https://news.hidive.com/2025/9/18/the-hidive-fall-2025-simulcast-lineup-is-here">
+						<h3 class="lf-feature-title">HIDIVE Fall 2025 Simulcast Lineup!</h3>
+						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> HIDIVE News</span>
+						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/HIDIVE_fall_2025_Season.jpg"></img>
+					</a>
+				</div>
 				<div class="lf-feature">
 					<a class="lf-feature-link" href="https://www.gofundme.com/f/support-mike-mcfarlands-road-to-recovery?attribution_id=sl%3Af58f356c-fb11-4cdc-b5cf-eea89caad632">
 						<h3 class="lf-feature-title">Support Mike McFarland's Road to Recovery</h3>
