--- a/index.html
+++ b/index.html
@@ -158,6 +158,25 @@
 					-->
 					<div class="spotlight-artical">
 						<h2 class="spotlight-article-title">
+							A Relentless Bombardment of Punches Lights Up the Night Sky
+						</h2>
+						<p class="spotlight-article-text">
+							The mad lads of Ufotable went crazy hard and the soundtrack elevated every impact. What a rush, the hype is real! I needed a few days after watching for the dust to settle to inspect the emotional damage: this honestly put Demon Slayer up a notch for me. One of the best canonical anime movies I’ve seen and best seen on the big screen. I can’t wait for the next one!
+						</p>
+						<div class="spotlight-article-media-container">
+							<img class="spotlight-article-media" src="assets/images/spotlight-article-media/Demon_Slayer/article-media_01.jpg" alt=""></img>
+						</div>
+						<div class="spotlight-article-source-container">
+							<a class="spotlight-article-source-kitsu" href="https://kitsu.app/anime/Kimetsu-no-Yaiba-Mugenjou-hen">
+								<div class="source-kitsu-image-container">
+									<img class="source-kitsu-image" src="assets/images/spotlight-article-media/Demon_Slayer/article-source_01.jpeg" alt=""></img>
+								</div>
+								<h4 class="source-kitsu-title">Demon Slayer: Kimetsu no Yaiba - Infinity Castle - Part 1: Akaza Returns</h4>
+							</a>
+						</div>
+					</div>
+					<div class="spotlight-artical">
+						<h2 class="spotlight-article-title">
 							A Gritty Sci-Fi Dystopian Criminal Underworld Chase! The 2000s are Back!
 						</h2>
 						<p class="spotlight-article-text">
