--- a/index.html
+++ b/index.html
@@ -158,6 +158,25 @@
 					-->
 					<div class="spotlight-artical">
 						<h2 class="spotlight-article-title">
+							bâan – Now I Am Home
+						</h2>
+						<p class="spotlight-article-text">
+							It was over before I knew it. I didn’t expect such an immersive lived in world and a rollercoaster of emotions. The music by Kevin Penkin and English dub especially Sydney Poniewaz and Alex Le were perfect! Gigguk is my favorite creator. His works have made me bust out laughing and brought me to tears; and this was no different. He’s done it, he made an anime that I won’t forget for a long time!
+						</p>
+						<div class="spotlight-article-media-container">
+							<img class="spotlight-article-media" src="assets/images/spotlight-article-media/Baan/article-media_01.jfif" alt=""></img>
+						</div>
+						<div class="spotlight-article-source-container">
+							<a class="spotlight-article-source-kitsu" href="https://youtu.be/V-P3HWXGYm4?si=Cl0VUEyuLTiTKd7I">
+								<div class="source-kitsu-image-container">
+									<img class="source-kitsu-image" src="assets/images/spotlight-article-media/Baan/article-source_01.jpeg" alt=""></img>
+								</div>
+								<h4 class="source-kitsu-title"><i class="fa-brands fa-youtube"></i> bâan: The Boundaries of Adulthood</h4>
+							</a>
+						</div>
+					</div>					
+					<div class="spotlight-artical">
+						<h2 class="spotlight-article-title">
 							A Relentless Bombardment of Punches Lights Up the Night Sky
 						</h2>
 						<p class="spotlight-article-text">
@@ -611,7 +630,6 @@
 							<a class="tile" href="https://kitsu.app/anime/gachiakuta"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/48946/poster_image/large-5855f32a7aa8e67ddc32d343498e087b.jpeg" alt="Gachiakuta"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/kijin-gentoushou"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/45151/poster_image/large-6668619f81fa927aea98500ddd67df28.jpeg" alt="Sword of the Demon Hunter"></img></a>
 							<a class="tile" href="https://kitsu.app/anime/mikadono-sanshimai-wa-angai-choroi"><img loading="Lazy" class="tile-image" src="https://media.kitsu.app/anime/49012/poster_image/large-c42fce56b7da973a188267b1f70a4f28.jpeg" alt="Dealing with Mikadono Sisters Is a Breeze"></img></a>
-							<a class="tile" href=""><img loading="Lazy" class="tile-image" src="" alt=""></img></a>
 						</div><!-- tiled-list -->
 					</div><!-- Binge Watching -->
 					<div class="watching-item"><!--Most Anticipated-->
