--- a/index.html
+++ b/index.html
@@ -158,6 +158,29 @@
 					-->
 					<div class="spotlight-artical">
 						<h2 class="spotlight-article-title">
+							Crunchyroll, Please Keep Typesetting Anime!
+						</h2>
+						<p class="spotlight-article-text">
+							Having advanced typesetting, subtitle font styling, and on-screen translations made Crunchyroll different from everyone else and the best place to watch anime. These elements are integral for an accessible anime viewing experience and provide important necessary context and understanding of what is happening on screen. Losing these integral elements will damage your product and be devastating to customers. Please continue typesetting Anime! 
+						</p>
+						<p class="spotlight-article-text">
+							This WILL impact Subs and Dubs and the future of anime. Srpead the word, Crunchyroll please continue typesetting Anime! 
+						</p>
+						<div class="spotlight-article-media-container">
+							<img class="spotlight-article-media" src="assets/images/spotlight-article-media/CR-Typesetting/article-media_01.jpg" alt="Screenshot from Ruri Rocks (Summer 2025, Crunchyroll) showing an example of on screen transalations and typesetting"></img>
+						</div>
+						<div class="spotlight-article-source-container">
+							<a class="spotlight-article-source-kitsu" href="https://daiz.moe/crunchyroll-is-destroying-its-subtitles-for-no-good-reason/#update-2025-11-21-its-not-looking-good">
+								<div class="source-kitsu-image-container">
+									<img class="source-kitsu-image" src="assets/images/spotlight-article-media/CR-Typesetting/article-source_01.png" alt=""></img>
+								</div>
+								<h4 class="source-kitsu-title"><i class="fa-solid fa-link"></i> “Crunchyroll is destroying its subtitles for no good reason”, Daiz on media and other ESCAPADES</h4>
+							</a>
+						</div>
+					</div>
+
+					<div class="spotlight-artical">
+						<h2 class="spotlight-article-title">
 							bâan – Now I Am Home
 						</h2>
 						<p class="spotlight-article-text">
@@ -1086,27 +1109,12 @@
 
 			<div id="tab_linksandfollows" class="tab tab-actionable sidebar-content">
 				<div class="lf-feature">
-					<a class="lf-feature-link" href="https://www.crunchyroll.com/news/seasonal-lineup/2025/9/17/fall-2025-anime-crunchyroll">
-						<h3 class="lf-feature-title">Crunchyroll Fall 2025 Season Announced!</h3>
-						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> Crunchyroll News</span>
-						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/Crunchyroll_fall_2025_Season.jpg"></img>
+					<a class="lf-feature-link" href="https://daiz.moe/crunchyroll-is-destroying-its-subtitles-for-no-good-reason/#update-2025-11-21-its-not-looking-good">
+						<h3 class="lf-feature-title">Crunchyroll, Please Keep Typesetting Anime!</h3>
+						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> daiz.moe</span>
+						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/Crunchyroll is destroying its subtitles for no good reason.png"></img>
 					</a>
 				</div>
-				<div class="lf-feature">
-					<a class="lf-feature-link" href="https://news.hidive.com/2025/9/18/the-hidive-fall-2025-simulcast-lineup-is-here">
-						<h3 class="lf-feature-title">HIDIVE Fall 2025 Simulcast Lineup!</h3>
-						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> HIDIVE News</span>
-						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/HIDIVE_fall_2025_Season.jpg"></img>
-					</a>
-				</div>
-				<div class="lf-feature">
-					<a class="lf-feature-link" href="https://www.gofundme.com/f/support-mike-mcfarlands-road-to-recovery?attribution_id=sl%3Af58f356c-fb11-4cdc-b5cf-eea89caad632">
-						<h3 class="lf-feature-title">Support Mike McFarland's Road to Recovery</h3>
-						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> gofundme</span>
-						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/mike.png"></img>
-					</a>
-				</div>
-
 				<div class="lf-list">
 					<h3 class="lf-heading">News</h3>				
 					<a class="lf-link" href="https://www.reddit.com/r/anime/">
