--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 							Having advanced typesetting, subtitle font styling, and on-screen translations made Crunchyroll different from everyone else and the best place to watch anime. These elements are integral for an accessible anime viewing experience and provide important necessary context and understanding of what is happening on screen. Losing these integral elements will damage your product and be devastating to customers. Please continue typesetting Anime! 
 						</p>
 						<p class="spotlight-article-text">
-							This WILL impact Subs and Dubs and the future of anime. Srpead the word, Crunchyroll please continue typesetting Anime! 
+							This WILL impact Subs and Dubs and the future of anime. Spread the word, Crunchyroll please continue typesetting Anime! 
 						</p>
 						<div class="spotlight-article-media-container">
 							<img class="spotlight-article-media" src="assets/images/spotlight-article-media/CR-Typesetting/article-media_01.jpg" alt="Screenshot from Ruri Rocks (Summer 2025, Crunchyroll) showing an example of on screen transalations and typesetting"></img>
